--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="text/javascript" src="{{ url_for('static', filename='bundle.js') }}"></script>
+        <script type="text/javascript" src="dist/bundle.js">
         </script>
     </body>
 </html>
